hphp/test/zend/good/tests/classes/this.php.expectf
Fatal error: Invalid use of `$this`: it cannot be re-assigned in %s/test/zend/good/tests/classes/this.php on line 11